# learn-from-examples-wgpu

./: Cargo.toml  _rustfmt.toml  rustfmt.toml
src/: egui.rs  game_event_handle.rs  gfx.rs  main.rs  model.rs  painter.rs  studio.rs  time_world.rs  utils.rs
src/egui/: first.rs
src/studio/: bunnymark.rs  cube.rs  depth_buffer_example.rs  instances.rs  shader_playgroud_scene.rs  texture_example.rs  uniform_matrix_and_transform_in_shader.rs
src/studio/circle_instances/: circle_instances.wgsl  mod.rs  sources.rs
src/studio/light/: readme.md
src/studio/mesh_on_ray/: mod.rs  ray_2d.wgsl
src/studio/shader/: depth_buffer_example.wgsl  instance.wgsl  texture_example.wgsl  uniform_matrix_and_transform_in_shader.wgsl
src/studio/shader_playgroud_scene/: base.wgsl
src/studio/try_simple_2d_light_shadow/: 1.wgsl  2.wgsl  light.rs  mesh.rs  mod.rs  shadow.rs
src/utils/models/: mod.rs
